# ridge_detection

./: .gitignore  CMakeLists.txt  README.md  build_clean.sh  demo  main.cc  main.cpp  main_app.cpp  run.sh
code/: region.h  strands.cpp
